Refactoring and added SparcFeatures project

--- a/SparcFeatures/SparcFeatures.csproj
+++ b/SparcFeatures/SparcFeatures.csproj
@@ -4,15 +4,11 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>Sparc</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Remove="compilerconfig.json" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="compilerconfig.json" />
+	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+	  <PackageReference Include="Sparc.Features" Version="6.1.4" />
   </ItemGroup>
 
 </Project>
