--- a/SparcFeatures/Properties/launchSettings.json
+++ b/SparcFeatures/Properties/launchSettings.json
@@ -11,10 +11,8 @@
   "profiles": {
     "Sparc.Features": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": false,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7044;http://localhost:5044",
+      "launchBrowser": true,
+      "applicationUrl": "http://localhost:7044",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
