--- a/SparcFeatures/SparcFeatures.csproj
+++ b/SparcFeatures/SparcFeatures.csproj
@@ -1,14 +1,21 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>30e88c96-c3e4-44e9-b6d8-af2d44f2d461</UserSecretsId>
   </PropertyGroup>
 
+	<ItemGroup>
+		<Content Include=".config\dotnet-tools.json"/>
+	</ItemGroup>
+
   <ItemGroup>
-	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-	  <PackageReference Include="Sparc.Features" Version="6.1.4" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
+	  <PackageReference Include="Sparc.Database.Cosmos" Version="6.0.8" />
+	  <PackageReference Include="Sparc.Features" Version="6.2.1" />
+	  <PackageReference Include="Sparc.Authentication.AzureADB2C" Version="2.7.0" />
   </ItemGroup>
 
 </Project>
