--- a/SparcWeb/SparcWeb.csproj
+++ b/SparcWeb/SparcWeb.csproj
@@ -1,18 +1,37 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>SparcWeb</RootNamespace>
   </PropertyGroup>
 
-  <ItemGroup>
-    <Content Remove="compilerconfig.json" />
-  </ItemGroup>
+	<ItemGroup>
+		<OpenApiReference Include="..\SparcFeatures\swagger.json" CodeGenerator="NSwagCSharp" Namespace="SparcFeatures" ClassName="SparcApi" Link="OpenAPIs\swagger.json" />
+	</ItemGroup>
 
   <ItemGroup>
-    <None Include="compilerconfig.json" />
+	  <PackageReference Include="BuildWebCompiler" Version="1.12.405" />
+	  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.4" />
+	  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.4" PrivateAssets="all" />
+	  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.4" />
+	  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.4" />
+	  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.4" />
+	  <PackageReference Include="Microsoft.Extensions.ApiDescription.Client" Version="6.0.4">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
+	  <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+	  <PackageReference Include="NSwag.ApiDescription.Client" Version="13.16.0">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
+	  <PackageReference Include="Sparc.Platforms.Web" Version="6.3.6" />
+	  <PackageReference Include="Sparc.UI" Version="6.3.0" />
   </ItemGroup>
+
+	<ItemGroup>
+		<TrimmerRootAssembly Include="Microsoft.Authentication.WebAssembly.Msal" />
+	</ItemGroup>
 
 </Project>
