--- a/SparcWeb/appsettings.json
+++ b/SparcWeb/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiUrl": "https://localhost:7044",
+    "AzureAdB2C": {
+      //"Authority": "https://mydomainname.b2clogin.com/tfp/mydomainname.onmicrosoft.com/B2C_1_SignIn_SignUp",
+      "ClientId": "10a2c1ad-f17d-4cb3-ae01-61ef3188caa5", // the Client ID of your Azure AD B2C UI Project
+      "ValidateAuthority": false
+    }
 }
