--- a/SparcWeb/SparcWeb.csproj
+++ b/SparcWeb/SparcWeb.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
 	  <PackageReference Include="BuildWebCompiler" Version="1.12.405" />
+	  <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />
 	  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.4" />
 	  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.4" PrivateAssets="all" />
 	  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.4" />
