--- a/SparcWeb/appsettings.Development.json
+++ b/SparcWeb/appsettings.Development.json
@@ -6,5 +6,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ApiUrl": "https://localhost:7044"
+  "ApiUrl": "https://localhost:7044",
+  "IbisApi": "https://localhost:7117"
 }
