Adjust IbisContentProvider to match changes

--- a/SparcWeb/wwwroot/appsettings.json
+++ b/SparcWeb/wwwroot/appsettings.json
@@ -1,11 +1,10 @@
 {
-  "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ApiUrl": "https://localhost:7044",
+  "AllowedHosts": "*",
   "IbisApi": "https://localhost:7117"
 }
