Update IbisContentProvider to match latest Ibis API & hook up to Project page

--- a/SparcWeb/SparcWeb.csproj
+++ b/SparcWeb/SparcWeb.csproj
@@ -23,8 +23,8 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
+	  <PackageReference Include="Sparc.Core" Version="6.3.0" />
 	  <PackageReference Include="Sparc.Platforms.Web" Version="6.3.6" />
-	  <PackageReference Include="Sparc.UI" Version="6.3.0" />
   </ItemGroup>
 
 	<ItemGroup>
