--- a/SparcFeatures/appsettings.json
+++ b/SparcFeatures/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "IbisApi": "https://api.ibis.chat"
 }
