Fix integrity issue, add Ibis JS, other arch cleanups
Defaulted the launchsettings to HTTPS instead of HTTP
Cleaned up outdated commented out code
Removed the unused Features and all references to Sparc.Features/Sparc.Cosmos
Removed the Startup.cs file and moved all startup config to Program.cs top level statements

--- a/SparcFeatures/Properties/launchSettings.json
+++ b/SparcFeatures/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "Sparc.Features": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:7044",
+      "applicationUrl": "https://localhost:7044",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
