--- a/SparcWeb/wwwroot/appsettings.Development.json
+++ b/SparcWeb/wwwroot/appsettings.Development.json
@@ -6,5 +6,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "IbisApi": "https://api.ibis.chat"
+  "IbisApi": "https://localhost:7117"
 }
