Updates for blog page and feature for SendEmailNotification

--- a/SparcFeatures/appsettings.json
+++ b/SparcFeatures/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "Twilio": {
+    "AccountSid": "", // the SID from your Twilio account
+    "AuthToken": "", // the secret Auth Token from your Twilio account (preferably store this in usersecrets.json)
+    //"FromPhoneNumber": "+1555121212", // the configured Twilio Phone Number to send SMSs
+    "FromEmailAddress": "info@sparc.coop", // the email address all emails will come from
+    "FromName": "Sparc", // the From name for all outbound emails
+    "SendGridApiKey": "" // the SendGrid API key from your Twilio / Sendgrid account
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
