Upgrade to Blossom

--- a/SparcFeatures/appsettings.json
+++ b/SparcFeatures/appsettings.json
@@ -1,10 +1,7 @@
 {
   "Twilio": {
-    "AccountSid": "", // the SID from your Twilio account
-    "AuthToken": "", // the secret Auth Token from your Twilio account (preferably store this in usersecrets.json)
-    //"FromPhoneNumber": "+1555121212", // the configured Twilio Phone Number to send SMSs
     "FromEmailAddress": "info@sparc.coop", // the email address all emails will come from
-    "FromName": "Sparc", // the From name for all outbound emails
+    "FromName": "Sparc Cooperative", // the From name for all outbound emails
     "SendGridApiKey": "" // the SendGrid API key from your Twilio / Sendgrid account
   },
   "Logging": {
@@ -14,5 +11,5 @@
     }
   },
   "AllowedHosts": "*",
-  "IbisApi": "https://api.ibis.chat"
+  "IbisApi": "https://ibis.chat"
 }
