--- a/SparcFeatures/Sparc.App.csproj
+++ b/SparcFeatures/Sparc.App.csproj
@@ -12,13 +12,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.0-rc.2.22476.2" />
-    <PackageReference Include="Sparc.Ibis" Version="7.0.0-pre.19" />
-    <PackageReference Include="Sparc.Notifications.Twilio" Version="6.1.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.0" />
+		<PackageReference Include="Sparc.Kernel" Version="7.0.0" />
+		<PackageReference Include="Sparc.Notifications.Twilio" Version="7.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\SparcWeb\SparcWeb.csproj" />
+		<ProjectReference Include="..\SparcWeb\Sparc.UI.csproj" />
 	</ItemGroup>
 
 </Project>
