Updates for the mobile menu

--- a/SparcFeatures/Properties/launchSettings.json
+++ b/SparcFeatures/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "Sparc.Features": {
+    "Sparc.Coop": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
