--- a/SparcFeatures/Sparc.Coop.csproj
+++ b/SparcFeatures/Sparc.Coop.csproj
@@ -23,8 +23,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.0" />
-		<PackageReference Include="Sparc.Ibis" Version="7.0.10" />
-		<PackageReference Include="Sparc.Kernel" Version="7.0.0" />
+		<PackageReference Include="Sparc.Ibis" Version="7.1.0-pre.2" />
+		<PackageReference Include="Sparc.Blossom.Server" Version="7.1.0-pre.7" />
 		<PackageReference Include="Sparc.Notifications.Twilio" Version="7.0.2" />
 	</ItemGroup>
 
