--- a/Kori/compilerconfig.json
+++ b/Kori/compilerconfig.json
@@ -2,5 +2,13 @@
   {
     "outputFile": "KoriLogin.razor.css",
     "inputFile": "KoriLogin.razor.scss"
+  },
+  {
+    "outputFile": "KoriWidget.razor.css",
+    "inputFile": "KoriWidget.razor.scss"
+  },
+  {
+    "outputFile": "KoriContent.razor.css",
+    "inputFile": "KoriContent.razor.scss"
   }
 ]
