add missing icons, html, css

--- a/SparcFeatures/appsettings.json
+++ b/SparcFeatures/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "DetailedErrors": true, // turns on CircuitOptions.DetailedErrors
   "Twilio": {
     "FromEmailAddress": "info@sparc.coop", // the email address all emails will come from
     "FromName": "Sparc Cooperative", // the From name for all outbound emails
