--- a/Kori/Kori.csproj
+++ b/Kori/Kori.csproj
@@ -13,6 +13,8 @@
 
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+		<PackageReference Include="Markdig" Version="0.37.0" />
+		<PackageReference Include="PSC.Blazor.Components.MarkdownEditor" Version="8.0.4" />
 		<SupportedPlatform Include="browser" />
 	</ItemGroup>
 
