--- a/SparcFeatures/Sparc.Coop.csproj
+++ b/SparcFeatures/Sparc.Coop.csproj
@@ -21,6 +21,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Include="Sparc.Blossom.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <ProjectReference Include="..\Kori\Kori.csproj" />
 	</ItemGroup>
 
