Integrate Blossom framework and passwordless auth
Added `Sparc.Blossom.Authentication` to `User.cs` and created an internal `User` class inheriting from `BlossomUser`. Updated `Program.cs` to use `AddBlossom` and `AddBlossomPasswordlessAuthentication<User>`. Modified `appsettings.json` to include a `Passwordless` section with an `ApiKey` placeholder.

--- a/SparcFeatures/appsettings.json
+++ b/SparcFeatures/appsettings.json
@@ -12,5 +12,8 @@
     }
   },
   "AllowedHosts": "*",
-  "IbisApi": "https://ibis.chat"
+  "IbisApi": "https://ibis.chat",
+  "Passwordless": {
+    "ApiKey":  "" // in usersecrets.json
+  }
 }
