Refactor authentication and optimize service registration
Refactored `BlossomPasswordlessAuthenticator<T>` to include new dependencies and properties, and updated its constructor. Streamlined the `LoginAsync` method and added several helper methods. Updated `BlossomUser` and `IBlossomAuthenticator` with new methods and properties. Modified `BlossomDefaultAuthenticator<T>` and `BlossomAuthenticator.razor` to use new method signatures. Updated `BlossomDefaultAuthenticatorMiddleware` and renamed JavaScript file in `Sparc.Blossom.Authentication.Passwordless.csproj`.

Updated `UserIcon.razor` SVG icons for better organization. Optimized `ServiceCollectionExtensions.cs` service registration. Introduced `BlossomPasswordlessAuthenticator.js` for passwordless authentication. Refactored `GlobalLogin.razor` to use Blazor's `AuthorizeView` and removed old JavaScript and CSS. Simplified exception handling in `Kori.cs`. Removed redundant logic in `LoginSignup.razor`. Refactored `Program.cs` for simplified setup. Updated `appsettings.json` for passwordless authentication.

Added new `client` object and functions in `BlossomPasswordlessAuthenticator.js` for initializing and handling passwordless sign-in and sign-up. Included passwordless CDN script for WebAuthn support.

--- a/SparcFeatures/appsettings.json
+++ b/SparcFeatures/appsettings.json
@@ -14,6 +14,7 @@
   "AllowedHosts": "*",
   "IbisApi": "https://ibis.chat",
   "Passwordless": {
-    "ApiKey":  "" // in usersecrets.json
+    "ApiKey": "ibis:public:3f75e71af04945af96defdd17d601d38",
+    "ApiSecret": "" // in usersecrets.json
   }
 }
