Implement UI enhancements and structure updates:
- Create Top Bar component.
- Add Top bar in KoriContent.
- Add new folder structure for modes, including files for each mode.
- Create new methods in Kori class to 'activate' the Mode

--- a/Kori/compilerconfig.json
+++ b/Kori/compilerconfig.json
@@ -10,5 +10,25 @@
   {
     "outputFile": "KoriContent.razor.css",
     "inputFile": "KoriContent.razor.scss"
+  },
+  {
+    "outputFile": "KoriTopBar.razor.css",
+    "inputFile": "KoriTopBar.razor.scss"
+  },
+  {
+    "outputFile": "Modes/SearchMode.razor.css",
+    "inputFile": "Modes/SearchMode.razor.scss"
+  },
+  {
+    "outputFile": "Modes/TranslateMode.razor.css",
+    "inputFile": "Modes/TranslateMode.razor.scss"
+  },
+  {
+    "outputFile": "Modes/BlogMode.razor.css",
+    "inputFile": "Modes/BlogMode.razor.scss"
+  },
+  {
+    "outputFile": "Modes/ABTestingMode.razor.css",
+    "inputFile": "Modes/ABTestingMode.razor.scss"
   }
 ]
