Create top bar JS file, create default mode file and update JS reference in Kori class

--- a/Kori/compilerconfig.json
+++ b/Kori/compilerconfig.json
@@ -30,5 +30,9 @@
   {
     "outputFile": "Modes/ABTestingMode.razor.css",
     "inputFile": "Modes/ABTestingMode.razor.scss"
+  },
+  {
+    "outputFile": "Modes/DefaultMode.razor.css",
+    "inputFile": "Modes/DefaultMode.razor.scss"
   }
 ]
