--- a/SparcFeatures/Sparc.Coop.csproj
+++ b/SparcFeatures/Sparc.Coop.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFramework>net9.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<UserSecretsId>30e88c96-c3e4-44e9-b6d8-af2d44f2d461</UserSecretsId>
@@ -18,6 +18,10 @@
 		<Content Include="Projects\ProjectsList.scss" />
 		<Content Include="Shared\NavMenu.scss" />
 		<Content Include="App.Variables.scss" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\kori\Sparc.Kori\Sparc.Kori.csproj" />
 	</ItemGroup>
 
 </Project>
