create new layout

--- a/Sparc2/Sparc2/compilerconfig.json
+++ b/Sparc2/Sparc2/compilerconfig.json
@@ -12,6 +12,10 @@
     "inputFile": "Shared/MainLayout.razor.scss"
   },
   {
+    "outputFile": "Shared/PageLayout.razor.css",
+    "inputFile": "Shared/PageLayout.razor.scss"
+  },
+  {
     "outputFile": "Shared/NavMenu.razor.css",
     "inputFile": "Shared/NavMenu.razor.scss"
   },
