Create Add Idea component, inject Blossom API, and update project to BlossomApp

--- a/Sparc2/Sparc2/compilerconfig.json
+++ b/Sparc2/Sparc2/compilerconfig.json
@@ -34,5 +34,9 @@
   {
     "outputFile": "Ideas/IdeasPage.razor.css",
     "inputFile": "Ideas/IdeasPage.razor.scss"
+  },
+  {
+    "outputFile": "Ideas/AddIdeaCard.razor.css",
+    "inputFile": "Ideas/AddIdeaCard.razor.scss"
   }
 ]
