Add card component, idea and donation files, update nav menu, icons, colors and imports

--- a/Sparc2/Sparc2/compilerconfig.json
+++ b/Sparc2/Sparc2/compilerconfig.json
@@ -38,5 +38,17 @@
   {
     "outputFile": "Ideas/AddIdeaCard.razor.css",
     "inputFile": "Ideas/AddIdeaCard.razor.scss"
+  },
+  {
+    "outputFile": "Shared/Components/AddCard.razor.css",
+    "inputFile": "Shared/Components/AddCard.razor.scss"
+  },
+  {
+    "outputFile": "Ideas/AddIdea.razor.css",
+    "inputFile": "Ideas/AddIdea.razor.scss"
+  },
+  {
+    "outputFile": "Donations/AddDonation.razor.css",
+    "inputFile": "Donations/AddDonation.razor.scss"
   }
 ]
