--- a/Sparc2/Sparc2/Sparc2.csproj
+++ b/Sparc2/Sparc2/Sparc2.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -12,10 +12,6 @@
 
   <ItemGroup>
     <PackageReference Include="Sparc.Blossom" Version="9.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Shared\Components\" />
   </ItemGroup>
 
   <ItemGroup>
