--- a/Sparc2/Sparc2/Sparc2.csproj
+++ b/Sparc2/Sparc2/Sparc2.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>746a2b51-9104-4b4b-9a38-a6f14f17464e</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.24.0" />
     <PackageReference Include="Sparc.Blossom" Version="9.0.0" />
   </ItemGroup>
 
