--- a/Sparc2/Sparc2/Sparc2.csproj
+++ b/Sparc2/Sparc2/Sparc2.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.24.0" />
+    <PackageReference Include="Bogus" Version="35.6.3" />
     <PackageReference Include="Sparc.Blossom" Version="9.0.0" />
   </ItemGroup>
 
