--- a/Sparc2/Sparc2/Sparc2.csproj
+++ b/Sparc2/Sparc2/Sparc2.csproj
@@ -8,17 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Remove="compilerconfig.json" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Azure.Storage.Blobs" Version="12.24.0" />
     <PackageReference Include="Bogus" Version="35.6.3" />
-    <PackageReference Include="Sparc.Blossom" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="compilerconfig.json" />
+    <ProjectReference Include="..\..\..\blossom\Sparc.Blossom.ApiGenerator\Sparc.Blossom.ApiGenerator.csproj" OutputItemType="Analyzer" />
+    <ProjectReference Include="..\..\..\blossom\Sparc.Blossom.Core\Sparc.Blossom.Core.csproj" />
+    <ProjectReference Include="..\..\..\blossom\Sparc.Blossom.Data.AzureStorage\Sparc.Blossom.Data.AzureStorage.csproj" />
+    <ProjectReference Include="..\..\..\blossom\Sparc.Blossom.Data.Cosmos\Sparc.Blossom.Data.Cosmos.csproj" />
+    <ProjectReference Include="..\..\..\blossom\Sparc.Blossom\Sparc.Blossom.csproj" />
   </ItemGroup>
-
 </Project>
