Blossom just needs to be a Razor Class Library???

--- a/Sparc2/Sparc2/Sparc2.csproj
+++ b/Sparc2/Sparc2/Sparc2.csproj
@@ -1,7 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net9.0-browser</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>746a2b51-9104-4b4b-9a38-a6f14f17464e</UserSecretsId>
