Improve passkey auth flow with email modal and Kori product assignment

--- a/Sparc2/Sparc2/compilerconfig.json
+++ b/Sparc2/Sparc2/compilerconfig.json
@@ -74,5 +74,9 @@
   {
     "outputFile": "Shared/Components/Auth.razor.css",
     "inputFile": "Shared/Components/Auth.razor.scss"
+  },
+  {
+    "outputFile": "Shared/Components/AddEmailModal.razor.css",
+    "inputFile": "Shared/Components/AddEmailModal.razor.scss"
   }
 ]
