Create profile component; implement add/edit for email and phone number

--- a/Sparc2/Sparc2/Sparc2.csproj
+++ b/Sparc2/Sparc2/Sparc2.csproj
@@ -28,6 +28,7 @@
   <ItemGroup>
     <None Include="compilerconfig.json" />
     <None Include="Shared\Icons\Language.razor" />
+    <None Include="wwwroot\images\puppy.jpg" />
   </ItemGroup>
 
   <ItemGroup>
