Added payment feature for "Buy Product" and "Donate" with multicurrency and multiprices

--- a/Sparc2/Sparc2/compilerconfig.json
+++ b/Sparc2/Sparc2/compilerconfig.json
@@ -60,6 +60,10 @@
     "inputFile": "Donations/AddDonation.razor.scss"
   },
   {
+    "outputFile": "Pages/AddProduct.razor.css",
+    "inputFile": "Pages/AddProduct.razor.scss"
+  },
+  {
     "outputFile": "Shared/Components/Breadcrumbs.razor.css",
     "inputFile": "Shared/Components/Breadcrumbs.razor.scss"
   },
