Start implementing language selection

--- a/Sparc2/Sparc2/compilerconfig.json
+++ b/Sparc2/Sparc2/compilerconfig.json
@@ -86,5 +86,9 @@
   {
     "outputFile": "Shared/Components/ProfileCircle.razor.css",
     "inputFile": "Shared/Components/ProfileCircle.razor.scss"
+  },
+  {
+    "outputFile": "Shared/Components/LanguageSelector.razor.css",
+    "inputFile": "Shared/Components/LanguageSelector.razor.scss"
   }
 ]
