update product page ui, move product info to own component

--- a/Sparc2/Sparc2/compilerconfig.json
+++ b/Sparc2/Sparc2/compilerconfig.json
@@ -94,5 +94,9 @@
   {
     "outputFile": "Catalog/ProductPage.razor.css",
     "inputFile": "Catalog/ProductPage.razor.scss"
+  },
+  {
+    "outputFile": "Catalog/ProductInfo.razor.css",
+    "inputFile": "Catalog/ProductInfo.razor.scss"
   }
 ]
