Implement update avatar feature

--- a/Sparc2/Sparc2/compilerconfig.json
+++ b/Sparc2/Sparc2/compilerconfig.json
@@ -122,5 +122,9 @@
   {
     "outputFile": "Profile/Verification.razor.css",
     "inputFile": "Profile/Verification.razor.scss"
+  },
+  {
+    "outputFile": "Profile/UserProfile.razor.css",
+    "inputFile": "Profile/UserProfile.razor.scss"
   }
 ]
