purchase page/tab, implement product buttons/tabs on product page

--- a/Sparc2/Sparc2/compilerconfig.json
+++ b/Sparc2/Sparc2/compilerconfig.json
@@ -98,5 +98,13 @@
   {
     "outputFile": "Catalog/ProductInfo.razor.css",
     "inputFile": "Catalog/ProductInfo.razor.scss"
+  },
+  {
+    "outputFile": "Catalog/ProductActions.razor.css",
+    "inputFile": "Catalog/ProductActions.razor.scss"
+  },
+  {
+    "outputFile": "Catalog/ProductPurchase.razor.css",
+    "inputFile": "Catalog/ProductPurchase.razor.scss"
   }
 ]
