Fix merge conflicts

--- a/Sparc2/Sparc2/compilerconfig.json
+++ b/Sparc2/Sparc2/compilerconfig.json
@@ -138,5 +138,9 @@
   {
     "outputFile": "Catalog/ProductPurchasePrices.razor.css",
     "inputFile": "Catalog/ProductPurchasePrices.razor.scss"
+  },
+  {
+    "outputFile": "Catalog/ProductPurchaseStripeForm.razor.css",
+    "inputFile": "Catalog/ProductPurchaseStripeForm.razor.scss"
   }
 ]
