Start refactoring product purchase into separate components

--- a/Sparc2/Sparc2/compilerconfig.json
+++ b/Sparc2/Sparc2/compilerconfig.json
@@ -142,5 +142,9 @@
   {
     "outputFile": "Catalog/ProductPurchaseStripeForm.razor.css",
     "inputFile": "Catalog/ProductPurchaseStripeForm.razor.scss"
+  },
+  {
+    "outputFile": "Catalog/PurchaseSummary.razor.css",
+    "inputFile": "Catalog/PurchaseSummary.razor.scss"
   }
 ]
